-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: None
-
Component/s: Replication, Storage Engine - InnoDB
-
Labels:None
- is duplicated by
-
MDEV-16692 INSERT ON DUPLICATE KEY UPDATE produces error 1032 (Can't find record)
-
- Closed
-
-
MDEV-18141 Unexpected ER_KEY_NOT_FOUND upon REPLACE into table with foreign key with statement binary logging
-
- Closed
-
- relates to
-
MDEV-17603 Allow statement-based replication for REPLACE and INSERT…ON DUPLICATE KEY UPDATE
-
- Closed
-
-
MDEV-13206 INSERT ON DUPLICATE KEY UPDATE foreign key fail
-
- Closed
-
-
MDEV-17603 Allow statement-based replication for REPLACE and INSERT…ON DUPLICATE KEY UPDATE
-
- Closed
-
-
MDEV-19342 Merge new release of InnoDB 5.7.26 to 10.2
-
- Closed
-